--- a/week_2/eindopdracht/styles.css
+++ b/week_2/eindopdracht/styles.css
@@ -1,7 +1,10 @@
 body{
-    background-color: dimgray;
+    background-image: url("imgs/woowd.jpg");
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
 }
-
 
 .container {
     display: flex;
@@ -9,12 +12,57 @@ body{
     align-items: center;
     height: 100vh;
 }
-.backwards {
+.flip_text {
     display: inline;
-    font-size: 100px;
+    font-size: 30px;
+    margin: 0 10px 0 10px;
     -moz-transform: scale(-1, -1);
     -webkit-transform: scale(-1, -1);
     -o-transform: scale(-1, -1);
     -ms-transform: scale(-1, -1);
     transform: scale(-1, -1);
+}
+.flip_img{
+    transform: rotate(180deg);
+}
+
+.card{
+    position: relative;
+    width: 200px;
+    height: 300px;
+    background-color: white;
+    border-radius: 20px;
+    border: 2px solid black;
+    margin: 20px;
+    box-shadow: 2px 5px black;
+}
+.card_top{
+    display: flex;
+    flex-direction: column;
+}
+.card_bottom{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    left: 79%;
+    top: 77%;
+
+}
+
+p{
+    font-size: 30px;
+    margin: 10px 0 0 10px;
+}
+img{
+    width: 30px;
+    height: 30px;
+    margin: 0 0 0 7px;
+}
+.garon{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100px;
+    height: 100px;
+    transform: translate(-50%, -50%);
 }
