--- a/week_3/workshop_3/styles.css
+++ b/week_3/workshop_3/styles.css
@@ -1,15 +1,13 @@
-*{
-    margin: 0;
-}
-body{
-    background-image: linear-gradient(to top ,#1B2838, #2A475E);
-}
+*{margin: 0;}
+
+body{background-image: linear-gradient(to top ,#1B2838, #2A475E);}
+
 h2{
-    color: #4DFFFF;
+    color: #66C0F4;
     margin: 2px;
 }
 h3{
-    color: #4DFFFF;
+    color: #66C0F4;
     margin: 2px;
 }
 p{
@@ -23,21 +21,17 @@ header{
     width: 100%;
     height: 30px;
 }
-header > div{
-    width: 50%;
-}
+header > div{width: 50%;}
 #nav_bar{
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 60px;
 }
-#nav_bar > div{
-    width: 50%;
-}
-#nav_bar > div > a{
-    font-size: 30px;
-}
+
+#nav_bar > div{width: 50%;}
+#nav_bar > div > a{font-size: 30px;}
+
 #destinations{
     display: flex;
     justify-content: start;
@@ -56,10 +50,8 @@ header > div{
     width: 15%;
 }
 #filters > div{
-
     width: 75%;
     margin: 10px;
-
 }
 #products{
     display: flex;
@@ -73,9 +65,7 @@ header > div{
     flex-direction: row;
     background-color: #171A21;
 }
-#bottom > div{
-    width: 25%;
-}
+#bottom > div{width: 25%;}
 footer{
     background-color: #171A21;
     height: 30px;
@@ -100,9 +90,9 @@ footer{
     display: flex;
     flex-direction: row;
 }
-.info_row > div{
-    width: 50%;
-}
+
+.info_row > div{width: 50%;}
+
 .cart_img{
     width: 40px;
     height: 40px;
@@ -120,13 +110,11 @@ footer{
     font-size: 16px;
     border: none;
 }
-
 .dropdown {
     width: 100%;
     align-self: center;
     display: inline-block;
 }
-
 .dropdown-content {
     display: none;
     position: absolute;
@@ -135,7 +123,6 @@ footer{
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1;
 }
-
 .dropdown-content a {
     color: black;
     padding: 12px 16px;
@@ -159,9 +146,11 @@ a{
     flex-direction: row;
     justify-content: end;
 }
-a{
-    color: #f1f1f1;
-}
-li{
-    margin: 5px;
-}
+
+a{color: #f1f1f1;}
+
+li{margin: 5px;}
+
+a:link { text-decoration: none; }
+
+a:hover { color: #388DE7 }
