--- a/week_3/workshop_3/styles.css
+++ b/week_3/workshop_3/styles.css
@@ -83,8 +83,8 @@ footer{
 .product_item > img{
     margin: auto;
     padding: 10px;
-    width: 175px;
-    height: 175px;
+    max-width: 175px;
+    max-height: 175px;
 }
 .info_row{
     display: flex;
